--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Profit Factor: How Pros Judge Trading Strategies</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">32 minutes ago</div>
+                        <div class="date">42 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>An Otherworldly Power | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Spirituality Is Not About Withdrawal | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Dhyanalinga – A Storehouse of Kriyas | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Trading Long vs. Short: Profitability Analysis #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -728,7 +728,7 @@
                     <div class="video-info">
                         <h3>How To Trust Your Trading Strategy</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2246,7 +2246,7 @@
                     <div class="video-info">
                         <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Profit Factor: How Pros Judge Trading Strategies</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">32 minutes ago</div>
+                            <div class="date">42 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Trading Long vs. Short: Profitability Analysis #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5842,7 +5842,7 @@
                         <div class="video-info">
                             <h3>How To Trust Your Trading Strategy</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6469,7 +6469,7 @@
                         <div class="video-info">
                             <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>An Otherworldly Power | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Spirituality Is Not About Withdrawal | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Dhyanalinga – A Storehouse of Kriyas | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
